--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <main>
       <section class="section-about">
-        <div class="u-center-text u-margin-bottom-8">
+        <div class="u-center-text u-margin-bottom-big">
             <h2 class="heading-secondary">
               Exciting Tours for Adventurours People
             </h2>
@@ -39,10 +39,28 @@
 
         <div class="row">
           <div class="col-1-of-2">
-            Text content
+            <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+            <p class="paragraph">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, necessitatibus 
+              veniam possimus architecto magni autem doloremque ut, illum vel repellendus aliquam 
+              eaque perspiciatis dolorem. Aperiam unde hic architecto inventore numquam.
+            </p>
+
+            <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before</h3>
+            <p class="paragraph">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, necessitatibus 
+              veniam possimus architecto magni autem doloremque ut, illum vel repellendus aliquam 
+              eaque perspiciatis dolorem. Aperiam unde hic architecto inventore numquam.
+            </p>
+
+            <a href="#" class="btn-text">Learn More &rarr;</a>
           </div>
           <div class="col-1-of-2">
-            Image composition
+            <div class="composition">
+              <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+              <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+              <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+            </div>
           </div>
         </div>
       </section>
