--- a/index.html
+++ b/index.html
@@ -222,22 +222,26 @@
                       </div>
                   </div>
     
-                    <div class="card__side card__side--back card__side--back-3">
-                      <div class="card__cta">
-                        <div class="card__price-box">
-                          <p class="card__price-only">
-                            Only
-                          </p>
-                          <p class="card__price-value">
-                            $897
-                          </p>
-                        </div>
-                        <a href="" class="btn btn--white">Book now!</a>
+                  <div class="card__side card__side--back card__side--back-3">
+                    <div class="card__cta">
+                      <div class="card__price-box">
+                        <p class="card__price-only">
+                          Only
+                        </p>
+                        <p class="card__price-value">
+                          $897
+                        </p>
                       </div>
+                      <a href="" class="btn btn--white">Book now!</a>
                     </div>
+                  </div>
               </div>
             </div>
-          </div>
+          </div><!-- end .row -->
+
+          <div class="u-center-text u-margin-top-huge">
+            <a href="" class="btn btn--green">Discover all tours</a>
+        </div>
       </section>
     </main>
 
