--- a/index.html
+++ b/index.html
@@ -243,6 +243,30 @@
             <a href="" class="btn btn--green">Discover all tours</a>
         </div>
       </section>
+
+      <div class="section-stories">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+            We make people genuinely happy
+          </h2>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family!</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae ipsa aspernatur harum sed vitae aliquam doloremque, eaque, 
+                distinctio numquam repellendus aperiam, officiis temporibus perferendis veniam sapiente ratione nesciunt? Vitae, non.
+                Beatae ipsa aspernatur harum sed vitae aliquam doloremque, eaque.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <!-- <section class="grid-test">
