--- a/index.html
+++ b/index.html
@@ -255,6 +255,9 @@
           <div class="story">
             <figure class="story__shape">
               <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
+              <figcaption class="story__caption">
+                Mary Smith
+              </figcaption>
             </figure>
             <div class="story__text">
               <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family!</h3>
@@ -266,6 +269,30 @@
             </div>
           </div>
         </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img src="img/nat-9.jpg" alt="Person on a tour" class="story__img">
+              <figcaption class="story__caption">
+                Jack Wilson
+              </figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">WOW! My life is completely different now</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae ipsa aspernatur harum sed vitae aliquam doloremque, eaque, 
+                distinctio numquam repellendus aperiam, officiis temporibus perferendis veniam sapiente ratione nesciunt? Vitae, non.
+                Beatae ipsa aspernatur harum sed vitae aliquam doloremque, eaque.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="u-center-text u-margin-top-huge">
+          <a href="#" class="btn-text">Read all stories &rarr;</a>
+        </div>
+
       </div>
     </main>
 
