--- a/index.html
+++ b/index.html
@@ -244,7 +244,14 @@
         </div>
       </section>
 
-      <div class="section-stories">
+      <section class="section-stories">
+        <div class="bg-video">
+          <video class="bg-video__content" autoplay muted loop>
+            <source src="img/video.mp4" type="video/mp4"></source>
+            <source src="img/video.webm" type="video/webm"></source>
+            Your browser is not supported
+          </video>
+        </div>
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             We make people genuinely happy
@@ -293,7 +300,7 @@
           <a href="#" class="btn-text">Read all stories &rarr;</a>
         </div>
 
-      </div>
+      </section>
     </main>
 
     <!-- <section class="grid-test">
